--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -31,7 +31,7 @@ pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection {
   text-shadow: none;
-  background: var(--color3);
+  background: var(--bg4);
 }
 
 pre[class*="language-"]::selection,
@@ -39,7 +39,7 @@ pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
   text-shadow: none;
-  background: var(--color3);
+  background: var(--bg4);
 } */
 
 /* @media print {
