--- a/src/css/scheme.scss
+++ b/src/css/scheme.scss
@@ -15,7 +15,7 @@
     opacity: 0;
   }
   label {
-    color: var(--color3);
+    color: var(--bg4);
     cursor: pointer;
     display: inline-block;
     height: 1em;
